--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   db:
-    # We use a mariadb image which supports both amd64 & arm64 architecture
-    # image: mariadb:10.6.4-focal
-    # If you really want to use MySQL, uncomment the following line
     image: mysql:8.0.27
+    # Mariadb image which supports both amd64 & arm64 architecture
+    # If you really want to use Mariadb, uncomment the following line
+    # image: mariadb:10.6.4-focal
     command: '--default-authentication-plugin=mysql_native_password'
     volumes:
       - ./mysql:/var/lib/mysql
@@ -15,15 +15,11 @@ services:
       - MYSQL_PASSWORD=wordpress
     ports:
       - 4306:3306
-    # expose:
-    #   - 3306
-    #   - 33060
   wordpress:
     depends_on:
       - db
     image: wordpress:latest
     volumes:
-      # - wp_data:/var/www/html
       - ./uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
       - ./src/plugins:/var/www/html/wp-content/plugins
       - ./src/themes:/var/www/html/wp-content/themes
@@ -37,6 +33,3 @@ services:
       - WORDPRESS_DB_PASSWORD=wordpress
       - WORDPRESS_DB_NAME=wordpress
       - WORDPRESS_DB_PORT=3306
-# volumes:
-#   db_data:
-#   wp_data:
