--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,12 @@ services:
       - ./mysql:/var/lib/mysql
     restart: always
     environment:
-      - MYSQL_ROOT_PASSWORD=somewordpress
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MYSQL_DATABASE=wordpress
-      - MYSQL_USER=wordpress
-      - MYSQL_PASSWORD=wordpress
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
     ports:
-      - 4306:3306
+      - ${MYSQL_PORT}:3306
   wordpress:
     depends_on:
       - db
@@ -25,11 +25,11 @@ services:
       - ./src/themes:/var/www/html/wp-content/themes
       - ./src/uploads:/var/www/html/wp-content/uploads
     ports:
-      - 0.0.0.0:8000:80
+      - 0.0.0.0:${WORDPRESS_PORT}:80
     restart: always
     environment:
       - WORDPRESS_DB_HOST=db
-      - WORDPRESS_DB_USER=wordpress
-      - WORDPRESS_DB_PASSWORD=wordpress
+      - WORDPRESS_DB_USER=${MYSQL_USER}
+      - WORDPRESS_DB_PASSWORD=${MYSQL_PASSWORD}
       - WORDPRESS_DB_NAME=wordpress
       - WORDPRESS_DB_PORT=3306
